--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row-fluid">
                 <div class="span4">
                     <div id="left">
-						<h2 class="name-display"><a href="//www.youngkwon.org/"><em>Young D. Kwon</em></a>
+						<h2 class="name-display"><a href="//theyoungkwon.github.io/"><em>Young D. Kwon</em></a>
 						</h2>
 						<ul class="nav">
 		                    <li class="active"><a href="#">Home</a></li>
@@ -116,7 +116,7 @@
 
 						<!--<div class="container-fluid text-right"-->
 							<!--<p>-->
-								<!--<small>&copy; 2018 <a href="//www.youngkwon.org/">Young D. Kwon</a> ALL RIGHTS RESERVED</small><br>-->
+								<!--<small>&copy; 2018 <a href="//theyoungkwon.github.io/">Young D. Kwon</a> ALL RIGHTS RESERVED</small><br>-->
 								<!--<small>Acknowledgement to <a href="//juhokim.com" target="_blank">Prof. Juho Kim</a></small><br>-->
 								<!--<small><em>Last Updated: Dec 30, 2018</em></small>-->
 							<!--</p>-->
