--- a/log.html
+++ b/log.html
@@ -69,7 +69,7 @@
             <div class="row-fluid">
                 <div class="span4">
                     <div id="left">
-                        <h2 class="name-display"><a href="//www.youngkwon.org/"><em>Young D. Kwon</em></a>
+                        <h2 class="name-display"><a href="//theyoungkwon.github.io/"><em>Young D. Kwon</em></a>
                         </h2>
                         <ul class="nav">
                             <li class="active"><a href="index.html">Home</a></li>
