edited TMC to TMC 2022

--- a/research.html
+++ b/research.html
@@ -170,7 +170,7 @@
 									<p>
 										<b>MyoKey: Inertial Motion Sensing and Gesture-based QWERTY Keyboard for Extended Realities</b><br>
 										<font color="#aaaaaa">Kirill A. Shatilov, <font color="#000000"><u>Young D. Kwon</u></font>, Lik-Hang Lee, Dimitris Chatzopoulos, and Pan Hui</font><br>
-										<i><font color="red">TMC</font></i>
+										<i><font color="red">TMC 2022</font></i>
 										| <a href="papers/articles/shatilov_myokey_tmc22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/shatilov_myokey_tmc22.txt" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/9737726" target="_blank">Link</a>
