PAPER. added links to existing papers and added news regarding ckas seminar and samsung ai internship

--- a/index.html
+++ b/index.html
@@ -199,8 +199,13 @@
 					  	<div class="row-fluid">
 						<div class="span12 list">
 							<!-- <div class="section">News<span class="see-all">(<a href="log.html#news">See All</a>)</span></div> -->
-							<h3>News & Travel</h3>
+							<h3 id="news-travel">News & Travel</h3>
 							<ul class="news">
+
+								<li class="row-fluid">
+                                    <span class="news-date span3">Mar, 2022</span>
+                                    <span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS)</span>
+                                </li>
 
 								<li class="row-fluid">
                                     <span class="news-date span3">Sep, 2022</span>
@@ -225,6 +230,11 @@
 								<li class="row-fluid">
                                     <span class="news-date span3">May, 2022</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">"Exploring On-Device Learning Using Few Shots for Audio Classification"</a> is accepted to EUSIPCO 2022 <font color="red">[Paper]</font></span>
+                                </li>
+
+                                <li class="row-fluid">
+                                    <span class="news-date span3">April, 2022</span>
+                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center - Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
                                 </li>
 
 								<li class="row-fluid">
@@ -352,6 +362,7 @@
 										<i><font color="red">IPSN 2022</font></i>
 										| <a href="papers/articles/kwon_yono_ipsn22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_yono_ipsn22.txt" target="_blank">BibTex</a>
+										| <a href="https://ieeexplore.ieee.org/abstract/document/9826043" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-pros">
@@ -371,6 +382,7 @@
 										<i><font color="red">EUSIPCO 2022</font></i>
 										| <a href="papers/articles/chauhan_on-device-fsl_euspico22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/chauhan_on-device-fsl_euspico22.txt" target="_blank">BibTex</a>
+										| <a href="https://ieeexplore.ieee.org/document/9909551" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-myokey">
@@ -390,6 +402,7 @@
 										<i><font color="red">ASONAM 2022</font></i>
 										| <a href="papers/articles/vallapuram_causal_asonam22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/vallapuram_causal_asonam22.txt" target="_blank">BibTex</a>
+										| <a href="https://www.computer.org/csdl/proceedings-article/asonam/2022/10068687/1LKx71udlcI" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-gpu-training-perfail">
@@ -399,7 +412,7 @@
 										<i><font color="red">PerFail (PerCom 2022 Workshop)</font></i>
 										| <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/das_gpu-training_percom22.txt" target="_blank">BibTex</a>
-										| <a href="https://arxiv.org/abs/2202.10100" target="_blank">Link</a>
+										| <a href="https://ieeexplore.ieee.org/document/9767442" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-cl-benchmark">
@@ -538,6 +551,12 @@
 						<div class="row-fluid">
 							<div class="span12">
 								<div class="section">Research Experiences</div>
+
+									<p>
+                                        <a href="research.html#research-experiences-8">Optimising DNN Processing on Extremely Resource-Limited Devices</a><br>
+                                        <i>Research Intern (Advisor: <a href="https://steliosven10.github.io/" target="_blank">Dr. Stylianos I. Venieris</a>, <a href="https://ruihuili.github.io/" target="_blank">Dr. Rui Li</a>, and <a href="http://niclane.org/" target="_blank">Prof. Nicholas D. Lane</a>
+                                          ) &middot; Apr. 2022 ~ Apr. 2023</i><br>
+                                    </p>
 
 									<p>
                                         <a href="research.html#research-experiences-7">Incremental Learning on Resource-constrained Devices</a><br>
@@ -689,8 +708,10 @@
 						<!--Invited Talks-->
 						<div class="row-fluid">
 							<div class="span12">
-								<div class="section">Invited Talks</div>
+								<div class="section" id="invited-talks">Invited Talks</div>
 									<ul>
+										<li><a href="#invited-talks">[Cambridge Korea Academic Society]</a>[<b>25 Mar 2023</b>] Deep Learning at the Extreme Edge. Host: Dr. Gwangbin Bae</li>
+										
 										<li><a href="//english.kma.ac.kr/" target="_blank">[Korea Military Academy]</a>[<b>4 Feb 2022</b>] YONO: All You Need To Represent Multiple Dissimilar Neural Networks on Microcontrollers. Host: Prof. Juhee Kim</li>
 
 										<li><a href="https://www.kaist.ac.kr/en/" target="_blank">[KAIST]</a>[<b>27 Jan 2022</b>] On-device Continual Learning in Mobile Sensing Applications. Host: Prof. Lik-Hang Lee</li>
