--- a/log.html
+++ b/log.html
@@ -116,8 +116,13 @@
                         <div class="row-fluid">
                         <div class="span12 list">
                             <!-- <div class="section">News<span class="see-all">(<a href="log.html#news">See All</a>)</span></div> -->
-                            <h3>News & Travel Log</h3>
+                            <h3 id="news-travel">News & Travel</h3>
                             <ul class="news">
+
+                                <li class="row-fluid">
+                                    <span class="news-date span3">Mar, 2022</span>
+                                    <span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS)</span>
+                                </li>
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2022</span>
@@ -142,6 +147,11 @@
                                 <li class="row-fluid">
                                     <span class="news-date span3">May, 2022</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">"Exploring On-Device Learning Using Few Shots for Audio Classification"</a> is accepted to EUSIPCO 2022 <font color="red">[Paper]</font></span>
+                                </li>
+
+                                <li class="row-fluid">
+                                    <span class="news-date span3">April, 2022</span>
+                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center - Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
                                 </li>
 
                                 <li class="row-fluid">
