--- a/research.html
+++ b/research.html
@@ -145,6 +145,7 @@
 										<i><font color="red">IPSN 2022</font></i>
 										| <a href="papers/articles/kwon_yono_ipsn22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_yono_ipsn22.txt" target="_blank">BibTex</a>
+										| <a href="https://ieeexplore.ieee.org/abstract/document/9826043" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-pros">
@@ -164,6 +165,7 @@
 										<i><font color="red">EUSIPCO 2022</font></i>
 										| <a href="papers/articles/chauhan_on-device-fsl_euspico22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/chauhan_on-device-fsl_euspico22.txt" target="_blank">BibTex</a>
+										| <a href="https://ieeexplore.ieee.org/document/9909551" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-myokey">
@@ -183,6 +185,7 @@
 										<i><font color="red">ASONAM 2022</font></i>
 										| <a href="papers/articles/vallapuram_causal_asonam22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/vallapuram_causal_asonam22.txt" target="_blank">BibTex</a>
+										| <a href="https://www.computer.org/csdl/proceedings-article/asonam/2022/10068687/1LKx71udlcI" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-gpu-training-perfail">
@@ -192,7 +195,7 @@
 										<i><font color="red">PerFail (PerCom 2022 Workshop)</font></i>
 										| <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/das_gpu-training_percom22.txt" target="_blank">BibTex</a>
-										| <a href="https://arxiv.org/abs/2202.10100" target="_blank">Link</a>
+										| <a href="https://ieeexplore.ieee.org/document/9767442" target="_blank">Link</a>
 									</p></li>
 
 									<li id="publication-cl-benchmark">
@@ -412,45 +415,53 @@
 								<div class="section">Research Experiences</div>
 									
 									<p>
-                                        <a href="research-experiences-7">Incremental Learning on Resource-constrained Devices</a><br>
+                                        <a id="research-experiences-8" href="#research-experiences-8">Optimising DNN Processing on Extremely Resource-Limited Devices</a><br>
+                                        <i>Research Intern (Advisor: <a href="https://steliosven10.github.io/" target="_blank">Dr. Stylianos I. Venieris</a>, <a href="https://ruihuili.github.io/" target="_blank">Dr. Rui Li</a>, and <a href="http://niclane.org/" target="_blank">Prof. Nicholas D. Lane</a>
+                                          ) &middot; Apr. 2022 ~ Apr. 2023</i><br>
+                                          &bull; Participated in various projects related to optimising DNN processing on extremely resource-constrained devices<br>
+                                    </p>
+
+
+									<p>
+                                        <a id="research-experiences-7" href="#research-experiences-7">Incremental Learning on Resource-constrained Devices</a><br>
                                         <i>Research Assistant (Advisor:
                                         <a href="https://sites.google.com/view/jagmohan-chauhan/home?authuser=0" target="_blank">Dr. Jagmohan Chauhan</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>
                                           ) &middot; Jul. 2020 ~ Sep. 2020</i><br>
-                                          &bull; Participate in an ongoing project to apply incremental learning on resource-constrained devices<br>
+                                          &bull; Participated in a project to apply incremental learning on resource-constrained devices<br>
                                     </p>
 
 									<p>
-                                        <a id="research-experiences-6" href="#">A Study of Applying Neural Networks on a Database</a><br>
+                                        <a id="research-experiences-6" href="#research-experiences-6">A Study of Applying Neural Networks on a Database</a><br>
                                         <i>Research Assistant (Advisor:
                                         <a href="https://www.cse.ust.hk/faculty/dimitris/" target="_blank">Prof. Dimitris Papadias</a>
                                           ) &middot; Feb. 2020 ~ Jun. 2020</i><br>
-                                          &bull; Participate in an ongoing project to apply neural networks on a database<br>
+                                          &bull; Participated in a project to apply neural networks on a database<br>
                                     </p>
 
 									<p>
-                                        <a id="research-experiences-5" href="#">Computer Laboratory at the University of Cambridge</a><br>
+                                        <a id="research-experiences-5" href="#research-experiences-5">Computer Laboratory at the University of Cambridge</a><br>
                                         <i>Visiting Research Student (Advisor:
                                         <a href="https://sites.google.com/view/jagmohan-chauhan/home?authuser=0" target="_blank">Dr. Jagmohan Chauhan</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>
                                           ) &middot; Jul. 2019 ~ Dec. 2019</i><br>
-                                        &bull; Working on the Catastrophic Forgetting problem on mobile systems<br>
+                                        &bull; Investigated the Catastrophic Forgetting problem on mobile systems<br>
                                     </p>
 
 									<p>
-                                        <a id="research-experiences-4" href="#">User Engagement Analysis and Churn Prediction with LBSN Datasets</a><br>
+                                        <a id="research-experiences-4" href="#research-experiences-4">User Engagement Analysis and Churn Prediction with LBSN Datasets</a><br>
                                         <i>Postgraduate Research Stduent (Advisor:
                                         <a href="http://www.cse.ust.hk/~raywong/" target="_blank">Prof. Raymond Wong</a>
                                           and <a href="https://www.cse.ust.hk/~panhui/" target="_blank">Prof. Pan Hui</a>) &middot; Aug. 2018 ~ Present</i><br>
                                         &bull; Conducted a quantitative analysis to understand user engagement patterns exhibited both offline and online in LBSNs<br>
 								        &bull; Examined the behavioral differences between churners and stayers among highly active users from various aspects; significantly improved the performance of churn prediction task over all baselines using our proposed features<br>
 								        &bull; Paper accepted in the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/UbiComp), 2019 as the first author<br>
-                                        &bull; Working on additional project of characterizing users and predicting potential long-term contributors in LBSNs<br>
+                                        &bull; Investigated a project of characterizing users and predicting potential long-term contributors in LBSNs<br>
                                     </p>
                                     <p>
-                                        <a id="research-experiences-3" href="#">HKUST-DT System and Media Laboratory at HKUST</a><br>
+                                        <a id="research-experiences-3" href="#research-experiences-3">HKUST-DT System and Media Laboratory at HKUST</a><br>
                                         <i>Postgraduate Research Stduent (Advisor: <a href="https://www.cse.ust.hk/~panhui/" target="_blank">Prof. Pan Hui</a>) &middot; Aug. 2017 ~ Present</i><br>
                                         &bull; Carried out my own project on users' self-disclosing behaviors in online social networks. The resulting paper was accepted in ASONAM 2019 as the first author<br>
-                                        &bull; Participated in a project of <a href="#">Ph.D. student Ehsan Ul Haq</a> on inferring political leaning of users in a Q&A forum<br>
-                                        &bull; Involved in a project of <a href="#">Ph.D. student Reza Hadi Mogavi</a> on predicting churning users in a Q&A forum<br>
+                                        &bull; Participated in a project of <a href="https://scholar.google.com/citations?user=aSspA8IAAAAJ&hl=en" target="_blank">Ph.D. student Ehsan Ul Haq</a> on inferring political leaning of users in a Q&A forum<br>
+                                        &bull; Involved in a project of <a href="https://scholar.google.com/citations?user=_CzMFZ0AAAAJ&hl=en" target="_blank">Ph.D. student Reza Hadi Mogavi</a> on predicting churning users in a Q&A forum<br>
                                     </p>
                                     <!-- <p>
                                         <a id="research-experiences-">Machine Learning Projects with EMNIST and MovieLens Datasets</a><br>
