UPDATE. added news, updated professional experiences, added recent preprints.

--- a/files/travelmap.html
+++ b/files/travelmap.html
@@ -69,12 +69,13 @@
             function drawRegionsMap() {
             var data = google.visualization.arrayToDataTable([['Country', 'Counts'],
                 ['South Korea', 5],
-                ['Hong Kong', 5],
                 ['United Kingdom', 5],
+                ['Hong Kong', 5],
+                ['China', 4],
                 ['United States', 3],
                 ['Turkey', 3],
-                ['China', 3],
                 ['Taiwan', 3],
+                ['Germany', 3],
                 ['Finland', 2],
                 ['Macau', 2],
                 ['Japan', 2],
@@ -126,12 +127,13 @@
             <tab2>
                 <ol>
                     <li> South Korea </li>
-                    <li> Hong Kong </li>
                     <li> United Kingdom </li>
+                    <li> Hong Kong </li>
+                    <li> China </li>
                     <li> United States </li>
                     <li> Turkey </li>
-                    <li> China </li>
                     <li> Taiwan </li>
+                    <li> Germany </li>
                     <li> Finland </li>
                     <li> Macau </li>
                     <li> Japan </li>
