--- a/log.html
+++ b/log.html
@@ -120,6 +120,11 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Aug, 2023</span>
+                                    <span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a>.</span>
+                                </li>
+                                
+                                <li class="row-fluid">
                                     <span class="news-date span3">Mar, 2022</span>
                                     <span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS)</span>
                                 </li>
