--- a/research.html
+++ b/research.html
@@ -132,6 +132,47 @@
 						<br>
 
 
+						<!--Preprints-->
+						<div class="row-fluid">
+							<div class="span12">
+								<div class="section">Preprints</div>
+								<ul>
+									
+									<li id="preprints-tinytrain">
+									<p>
+										<b>TinyTrain: Deep Neural Network Training at the Extreme Edge</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
+										<i><font color="red">arXiv 2023</font></i>
+										| <a href="papers/articles/kwon_tinytrain_2023.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
+									</p></li>
+
+									<li id="preprints-usergpt">
+									<p>
+										<b>Exploring User Perspectives on ChatGPT: Applications, Perceptions, and Implications for AI-Integrated Education</b><br>
+										<font color="#aaaaaa">Reza Hadi Mogavi, Chao Deng, Justin Juho Kim, Pengyuan Zhou, <font color="#000000"><u>Young D. Kwon</u></font>, Ahmed Hosny Saleh Metwally, Ahmed Tlili, Simone Bassanelli, Antonio Bucchiarone, Sujit Gujar, Lennart E. Nacke, and Pan Hui</font><br>
+										<i><font color="red">arXiv 2023</font></i>
+										| <a href="papers/articles/mogavi_usergpt_2023.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2305.13114" target="_blank">Link</a>
+									</p></li>
+
+									<li id="preprints-hidenseek">
+									<p>
+										<b>HideNseek: Federated Lottery Ticket via Server-side Pruning and Sign Supermask</b><br>
+										<font color="#aaaaaa">Anish K. Vallapuram, Pengyuan Zhou, <font color="#000000"><u>Young D. Kwon</u></font>, Lik Hang Lee, Hengwei Xu, and Pan Hui</font><br>
+										<i><font color="red">arXiv 2022</font></i>
+										| <a href="papers/articles/vallapuram_hidenseek_2022.pdf" target="_blank">PDF</a>
+										| <a href="https://arxiv.org/abs/2206.04385" target="_blank">Link</a>
+									</p></li>
+
+								</ul>
+							</div>
+					    </div>
+						<hr>
+						<br>
+
+
+
 						<!--Publications-->
 						<div class="row-fluid">
 							<div class="span12">
