UPDATE. added news, updated professional experiences, added recent preprints.

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 										<span class="pull-left edu-left span2"><img src="./images/samsung_logo.png" height=auto width=100% /></span>
 										<div class="media-body">
 											<p>
-												<a href="https://www.samsung.com/semiconductor/" target="_blank">Samsung Electronics, Memory Business</a><br>
+												<a href="https://www.samsung.com/semiconductor/" target="_blank">Memory Business, Samsung Electronics</a><br>
 												<b><i>Engineer</i></b>
 												&middot; Jul. 2016 ~ Aug. 2017<br>
 												<b><i>Engineering Intern</i></b>
@@ -599,7 +599,7 @@
 										<span class="pull-left edu-left span2"><img src="./images/korea_airforce_logo.png" height=auto width=100% /></span>
 										<div class="media-body">
 											<p>
-												<a href="https://en.wikipedia.org/wiki/Republic_of_Korea_Air_Force" target="_blank">Republic of Korea Air Force, 1st Fighter Wing</a><br>
+												<a href="https://en.wikipedia.org/wiki/Republic_of_Korea_Air_Force" target="_blank">1st Fighter Wing, Republic of Korea Air Force</a><br>
 												<b><i>Staff Sergeant</i></b>
 												&middot; Feb. 2011 ~ Feb. 2013<br>
 											</p>
