NEWS. start a new job

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 		                    <li class="inactive"><a href="bio.html">Bio</a></li>
 		            	</ul>
 						<!-- <img class="profile" src="images/Me/1712_IMG_Young.jpg" alt="profile photo"><br /><br /> -->
-						<img class="profile" src="images/Me/1910_profile_pic.jpg" alt="profile photo"><br /><br />
-					    Ph.D. Student<br/>
-					    <a href="https://www.cl.cam.ac.uk/" target="_blank">Computer Laboratory</a><br>
+						<img class="profile" src="images/Me/2008_Young.jpg" alt="profile photo"><br /><br />
+					    Research Scientist<br/>
+					    <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a><br>
 				        <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a><br/><br/>
 					    <!-- <a href="files/CV_Young.html">Curriculum Vitae (PDF)</a> -->
 
@@ -100,9 +100,12 @@
 						<!--</p>-->
 					    <div class="logo-wrapper">
                             <a href="index.html#want-to-meet">Want to Meet?</a><br>
-                            <b>Contact:</b> ydk21&lt;at&gt;cam.ac.uk<br>
+                            <b>Contact:</b> ydk21&lt;at&gt;cam.ac.uk<br><br>
+                            <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">
+						  		<img src="images/samsung_research_logo.png" width="100px">
+							</a><br><br>
                             <a href="https://www.cam.ac.uk/" target="_blank">
-						  		<img src="images/cam_logo.png" width="100px">
+						  		<img src="images/cam_logo.png" width="120px">
 							</a><br>
 							
 							<!--<a href="http://kixlab.org/">-->
@@ -130,7 +133,8 @@
 						<!--About-->
 					    <div class="row-fluid bio" id="About">
 							<p>
-								I am a Ph.D. student majoring in Computer Science at the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>, where I am supervised by <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a> and funded by <a href="https://www.bell-labs.com/" target="_blank">Nokia Bell Labs</a>. 
+								I am a Research Scientist at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> and a doctoral candidate in Computer Science at the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>. I am fortunate to work with <a href="https://scholar.google.co.uk/citations?user=EU-ESvsAAAAJ&hl=en" target="_blank">Dr. Sourav Bhattacharya</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a>.	
+
 								<!-- I worked with <a href="https://sites.google.com/view/jagmohan-chauhan/home?authuser=0" target="_blank">Dr. Jagmohan Chauhan</a> and <a href="https://www.cl.cam.ac.uk/~cm542/" target="_blank">Prof. Cecilia Mascolo</a> in the summer of 2020 as a research assistant and 2019 as a visitor. Also, I worked as a research assistant with <a href="https://www.cse.ust.hk/faculty/dimitris/" target="_blank">Prof. Dimitris Papadias</a> at <a href="https://www.ust.hk/" target="_blank">HKUST</a> from February 2020 to June 2020. -->
 							</p>
 							<!-- <br> -->
@@ -144,7 +148,9 @@
 								<!--His research interests include Mobile and Social Computing, Human-Computer Interaction, Natural Language Processing, Social Network Analysis, Machine Learning.-->
 								<!-- The critical component of my research is to better understand, model, and predict users' behaviors at scale in both online and offline platforms. Also, I focus on resource-constrained mobile systems to enable the context-aware adaptation to the changing environments (e.g., new inputs and users) in real-time. -->
 
-								My research focuses on <b>resource-constrained</b> mobile systems to enable <b>context-aware adaptation</b> to the changing environments (e.g., new inputs and users) in real-time while preserving privacy. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>.
+								I am passionate about drastically <b>optimising On-device AI processing</b> via <b>algorithm & system innovations</b>, enabling various and exciting real-world applications for users, thereby pushing the boundaries of what's possible <b>within strict hardware constraints</b>. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>.
+
+								<!-- My research focuses on <b>resource-constrained</b> mobile systems to enable <b>context-aware adaptation</b> to the changing environments (e.g., new inputs and users) in real-time while preserving privacy. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>. -->
 
 								<!-- To this end, I leverage computational methods from on-device machine learning, continual learning, and network science. -->
 
@@ -203,6 +209,13 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+									<span class="news-date span3">Sep, 2023</span>
+									<span class="news-content span9">
+										I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist.
+									</span>
+                                </li>
+
+								<li class="row-fluid">
 									<span class="news-date span3">Aug, 2023</span>
 									<span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a>.</span>
                                 </li>
@@ -239,7 +252,7 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">April, 2022</span>
-                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center - Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
+                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
                                 </li>
 
 								<li class="row-fluid">
@@ -544,12 +557,14 @@
 							<div class="span12">
 								<div class="section">Professional Experiences</div>
 
-
 									<div class="media">
 										<span class="pull-left edu-left span2"><img src="./images/samsung_research_logo.png" height=auto width=100% /></span>
 										<div class="media-body">
 											<p>
-												<a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center - Cambridge</a><br>
+												<a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a><br>
+												<b><i>Research Scientist</i></b>
+												&middot; Sep. 2023 ~ Present<br>
+												Advisor: <a href="https://scholar.google.co.uk/citations?user=EU-ESvsAAAAJ&hl=en" target="_blank">Dr. Sourav Bhattacharya</a><br>
 												<b><i>Research Intern</i></b>
 												&middot; Apr. 2022 ~ Apr. 2023<br>
 												Advisor: <a href="https://steliosven10.github.io/" target="_blank">Dr. Stylianos I. Venieris</a>, <a href="https://ruihuili.github.io/" target="_blank">Dr. Rui Li</a>, <a href="http://niclane.org/" target="_blank">Prof. Nicholas D. Lane</a>
