--- a/log.html
+++ b/log.html
@@ -120,6 +120,13 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Sep, 2023</span>
+                                    <span class="news-content span9">
+                                        I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist.
+                                    </span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Aug, 2023</span>
                                     <span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a>.</span>
                                 </li>
