NEWS. start a new job (small modification)

--- a/index.html
+++ b/index.html
@@ -145,10 +145,8 @@
 							<!-- <br> -->
 
 							<p>
-								<!--His research interests include Mobile and Social Computing, Human-Computer Interaction, Natural Language Processing, Social Network Analysis, Machine Learning.-->
-								<!-- The critical component of my research is to better understand, model, and predict users' behaviors at scale in both online and offline platforms. Also, I focus on resource-constrained mobile systems to enable the context-aware adaptation to the changing environments (e.g., new inputs and users) in real-time. -->
 
-								I am passionate about drastically <b>optimising On-device AI processing</b> via <b>algorithm & system innovations</b>, enabling various and exciting real-world applications for users, thereby pushing the boundaries of what's possible <b>within strict hardware constraints</b>. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>.
+								I am passionate about drastically <b>optimising On-device AI processing</b> via <b>algorithm & system innovations</b>, enabling various and exciting real-world applications for users, thereby pushing the boundaries of what's possible <b>within strict hardware constraints</b>. 
 
 								<!-- My research focuses on <b>resource-constrained</b> mobile systems to enable <b>context-aware adaptation</b> to the changing environments (e.g., new inputs and users) in real-time while preserving privacy. To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>. -->
 
@@ -157,6 +155,10 @@
 								<!-- My research in Ubiquitous and Social Computing attempts <b>to better understand, model, and predict users' behaviors at scale</b> in both online and offline platforms. I also focus on resource-constrained mobile systems <b>to enable context-aware adaptation to the changing environments</b> (e.g., new inputs and users) in real-time while preserving privacy. I leverage computational methods from machine learning, natural language processing, and social network analysis. -->
 
 								<!-- His research focus on Ubiquitous and Social Computing is to better <b>understand user behaviors</b> at scales in online and offline platforms to improve <b>human well-being</b> and build <b>robust social systems</b>. He leverages computational methods from machine learning, natural language processing, and social network analysis. -->
+							</p>
+
+							<p>
+								To this end, I develop new methods and systems and leverage knowledge from <b>On-Device Machine Learning, Continual Learning, and Multi-Task Learning</b>.
 							</p>
 
 
@@ -211,7 +213,7 @@
 								<li class="row-fluid">
 									<span class="news-date span3">Sep, 2023</span>
 									<span class="news-content span9">
-										I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist.
+										I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist. <font color="red">[Promotion]</font>
 									</span>
                                 </li>
 
