--- a/log.html
+++ b/log.html
@@ -122,7 +122,7 @@
                                 <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2023</span>
                                     <span class="news-content span9">
-                                        I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist.
+                                        I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist. <font color="red">[Promotion]</font>
                                     </span>
                                 </li>
 
