--- a/log.html
+++ b/log.html
@@ -123,20 +123,33 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Nov, 2023</span>
+                                    <span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023 <font color="red">[Talk]</font></a> 
+                                    </span>
+                                </li>
+
+                                <li class="row-fluid">
+                                    <span class="news-date span3">Oct, 2023</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 <font color="red">[Paper]</font></span>
+                                </li>
+
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2023</span>
                                     <span class="news-content span9">
-                                        I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist. <font color="red">[Promotion]</font>
+                                    I embarked on a new chapter in my journey after (almost) completing my PhD: I joined <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI</a> as a Research Scientist. <font color="red">[Job]</font>
                                     </span>
                                 </li>
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Aug, 2023</span>
-                                    <span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a>.</span>
+                                    <span class="news-content span9">I am happy to serve as Artifact Evaluation Committee for <a href="https://sigmobile.org/mobicom/2023/index.html" target="_blank">MobiCom 2023</a></span>
                                 </li>
-                                
+
                                 <li class="row-fluid">
                                     <span class="news-date span3">Mar, 2022</span>
-                                    <span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS)</span>
+                                    <span class="news-content span9">I have been invited to give a talk, <a href="#news-travel">"Deep Learning at the Extreme Edge"</a>, at Cambridge Korea Academic Society (CKAS) <font color="red">[Talk]</font>
+                                    </span>
                                 </li>
 
                                 <li class="row-fluid">
@@ -151,12 +164,13 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Jun, 2022</span>
-                                    <span class="news-content span9">I plan to attend and present my recent work regarding efficient continual learning in mobile computing in <a href="https://mobiuk.org/2022/" target="_blank">MobiUK 2022</a> at UCL on 4-5th July. See you all soon there!</span>
+                                    <span class="news-content span9">I plan to attend and present my recent work regarding efficient continual learning in mobile computing in <a href="https://mobiuk.org/2022/" target="_blank">MobiUK 2022</a> at UCL on 4-5th July. See you all soon there! <font color="red">[Talk]</font>
+                                    </span>
                                 </li>
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">May, 2022</span>
-                                    <span class="news-content span9">I am invited to serve as a Shadow PC member for <a href="https://sensys.acm.org/2022/shadow/" target="_blank">ACM SenSys 2022</a>.</span>
+                                    <span class="news-content span9">I am invited to serve as a Shadow PC member for <a href="https://sensys.acm.org/2022/shadow/" target="_blank">ACM SenSys 2022</a></span>
                                 </li>
 
                                 <li class="row-fluid">
@@ -166,7 +180,7 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">April, 2022</span>
-                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center - Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
+                                    <span class="news-content span9">I started a research internship at <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a> focusing on optimising DNN processing on microcontrollers.</span>
                                 </li>
 
                                 <li class="row-fluid">
@@ -176,12 +190,14 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Feb, 2022</span>
-                                    <span class="news-content span9">I have been invited to give a talk about YONO (our recent IPSN paper) at KMA</span>
+                                    <span class="news-content span9">I have been invited to give a talk about YONO (our recent IPSN paper) at KMA <font color="red">[Talk]</font>
+                                    </span>
                                 </li>
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Jan, 2022</span>
-                                    <span class="news-content span9">I have been invited to give 2 talks regarding on-device continual leanring and multi-task learning on heterogeneous DNNs at KAIST</span>
+                                    <span class="news-content span9">I have been invited to give 2 talks regarding on-device continual leanring and multi-task learning on heterogeneous DNNs at KAIST <font color="red">[Talk]</font>
+                                    </span>
                                 </li>
 
                                 <li class="row-fluid">
