--- a/research.html
+++ b/research.html
@@ -182,6 +182,15 @@
 								<div class="section">Publications</div>
 								<ul>
 
+									<li id="publication-lifelearner">
+									<p>
+										<b>LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Hong Jia, and Stylianos I. Venieris, and Cecilia Mascolo</font><br>
+										<i><font color="red">SenSys 2023</font></i>
+										| <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/kwon_lifelearner_sensys23.txt" target="_blank">BibTex</a>
+									</p></li>
+									
 									<li id="publication-yono">
 									<p>
 										<b>YONO: Modeling Multiple Heterogeneous Neural Networks on Microcontrollers</b><br>
