--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 								<li class="row-fluid">
                                     <span class="news-date span3">Nov, 2023</span>
-                                    <span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023 <font color="red">[Talk]</font></a> 
+                                    <span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023</a> <font color="red">[Talk]</font>
                                     </span>
                                 </li>
 
